--- a/app/scripts/templates/notes.ejs
+++ b/app/scripts/templates/notes.ejs
@@ -1,7 +1,9 @@
 <% for(var i = 0; i < data.length; i++) {%>
     <li>
-        <span><%= data[i].title %></span>
-        <span><%= data[i].created %></span>
-        <span><%= data[i].updated %></span>
+        <a href="/notebooks/<%= data[i].notebookId %>/notes/<%= data[i]._id %>" >
+            <span><%= data[i].title %></span>
+            <span><%= data[i].created %></span>
+            <span><%= data[i].updated %></span>
+        </a>
     </li>
 <% } %>
