--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,5 +27,10 @@ ul { margin: 0; padding: 0; }
 
 .component__notes { padding: 1em; line-height: 2; list-style: none; }
 .component__notes li { display: block; box-sizing: border-box; cursor: default; }
-.component__notes li:hover { color: gray; }
 .component__notes li + li { border-top: 1px solid gray; }
+.component__notes a { color: black; text-decoration: none; cursor: default; }
+.component__notes a:hover { color: gray; }
+
+.component__note { position: relative; height: 100%; }
+.component__note-title { position: absolute; top: 0; left: 0; width: 100%; height: 2em; }
+.component__note-text { position: absolute; top: 2em; left: 0; width: 100%; bottom: 0; }
