--- a/server/templates/layout.jade
+++ b/server/templates/layout.jade
@@ -8,6 +8,7 @@ html
         meta(name="author", content=author)
         meta(name="viewport", content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='/styles/main.css')
+        link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
         script(src='/scripts/vendor/modernizr.js')
     body
         block content
