--- a/app/scripts/templates/notes.ejs
+++ b/app/scripts/templates/notes.ejs
@@ -1,3 +1,4 @@
+<ul class="component__notes-list">
 <% for(var i = 0; i < data.length; i++) {%>
     <li>
         <a href="/notebooks/<%= data[i].notebookId %>/notes/<%= data[i]._id %>" >
@@ -7,3 +8,5 @@
         </a>
     </li>
 <% } %>
+</ul>
+<input class="component__notes-plusOne" type="button" value="+" >
